--- a/Css/styling.css
+++ b/Css/styling.css
@@ -10,7 +10,7 @@ body{
     height: 470px;
     background-color: white;
     border-radius: 15px;
-    box-shadow: 1px 1px 5px 0;
+    box-shadow: 1px 1px 6px 0;
 }
 
 .qrcontainer img{
@@ -20,6 +20,8 @@ body{
 }
 .textcon{
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 200;
 }
 .textcon p{
     color: rgb(101, 101, 101);
